<resources>

    <string name="app_name">专业打码</string>
    <string name="load">选图</string>
    <string name="clear">清除</string>
    <string name="erase">擦除</string>
    <string name="save">保存</string>
    <string name="about">关于</string>
    <string name="finger_mode">模式</string>
    <string name="mode_path">跟随手指</string>
    <string name="mode_grid">方格模式</string>
    <string name="effect">效果</string>
    <string name="effect_grid">方格</string>
    <string name="effect_blur">毛玻璃</string>
    <string name="effect_color">纯色</string>
    <string name="choose_image">选择一张图片</string>
    <string name="email">Email</string>
    <string name="qq">QQ: 752481163</string>
    <string name="github">Github</string>

</resources>