<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_options"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/grey_2"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_load"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/load" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/clear" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/save" />

        <Button
            android:id="@+id/bt_about"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/about" />
    </LinearLayout>

    <me.dawson.promosaic.MosaicImage
        android:id="@+id/iv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_options"
        android:background="@color/grey_3"
        android:contentDescription="@string/app_name" />

</RelativeLayout>